# profile-service

./: .env.example  .gitignore  Dockerfile  PHASE_14_MEDIA_AGENT.md  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  blockchain.py  config.py  main.py
app/agent/: __init__.py  executor.py  factory.py  models.py  protocol.py  voice.py
app/agent/api/: __init__.py
app/analysis/: __init__.py  biography.py  personality.py
app/api/: __init__.py  nft.py
app/api/graphql/: __init__.py  resolvers.py  schema.py  types.py
app/db/: __init__.py  models.py  neo4j.py  postgres.py
app/events/: __init__.py  consumer.py
app/graph/: __init__.py  nodes.py  queries.py  rels.py
app/ingestion/: __init__.py  email_parser.py  enrichment.py  linkedin_parser.py  resume_parser.py
app/life_stream/: __init__.py  clickhouse.py  models.py
app/life_stream/api/: __init__.py  ingest.py  memory.py
app/life_stream/workers/: __init__.py  pattern_miner.py
app/media/: __init__.py  models.py  storage.py  taste_graph.py
app/media/api/: __init__.py
app/media/workers/: __init__.py  vision_worker.py
blockchain/: hardhat.config.js  package.json
blockchain/contracts/: BuilderReputation.sol
blockchain/scripts/: deploy.js
docs/: LIFE_STREAM.md
scripts/: clickhouse_init.sql  seed.py
src/profile_service/: __init__.py  config.py  database.py  main.py
src/profile_service/models/: __init__.py  company.py  event.py  interest.py  person.py  relationships.py  skill.py
src/profile_service/repositories/: __init__.py  company_repo.py  graph_repo.py  person_repo.py  relationship_repo.py
src/profile_service/routers/: __init__.py  companies.py  graph.py  persons.py  relationships.py
tests/: conftest.py  test_api.py  test_person_repo.py
