[project]
name = "profile-service"
version = "0.4.0"
description = "Universal Human Profile - Digital Biographer with Knowledge Graph, Life Stream, Media Understanding & Personal Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "strawberry-graphql[fastapi]>=0.219.0",
    # Databases
    "neo4j>=5.17.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # ClickHouse for Life Stream
    "clickhouse-connect>=0.7.0",
    "aiochclient>=2.5.0",
    # Object Storage (MinIO/S3)
    "minio>=7.2.0",
    "boto3>=1.34.0",
    # Vector Database
    "chromadb>=0.4.0",
    # Kafka
    "aiokafka>=0.10.0",
    # AI
    "google-generativeai>=0.3.0",
    "openai>=1.10.0",
    "pillow>=10.2.0",
    # ML / Pattern Mining
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    # Background Tasks
    "apscheduler>=3.10.0",
    # Encryption
    "cryptography>=42.0.0",
    # Utils
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    # Blockchain
    "web3>=6.0.0",
    "eth-account>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "black>=24.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
